# speed_lib

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  run_tests.sh
.github/workflows/: ci.yml
examples/: CMakeLists.txt  example.cpp
include/: speed_lib.hpp
include/speed_lib/: common.hpp  formatting.hpp  formatting_specializations.hpp  mixed_operations.hpp
include/speed_lib/detail/: unit_macros.hpp  unit_macros_undef.hpp
include/speed_lib/units/: length.hpp  speed.hpp  temperature.hpp  time.hpp
tests/: CMakeLists.txt  test_arithmetic.cpp  test_comparison.cpp  test_compile_time.cpp  test_conversion.cpp  test_formating.cpp  test_literals.cpp  test_speed.cpp  test_time_length.cpp
